# script-wars

./: Cargo.toml
crates/sw-client/: Cargo.toml
crates/sw-client/src/: lib.rs  main.rs
crates/sw-client/src/structures/: graphics.rs  mod.rs  rect.rs  sprite.rs
crates/sw-client/src/systems/: render.rs
crates/sw-compiler/: Cargo.toml
crates/sw-core/: Cargo.toml
crates/sw-core/src/: components.rs  events.rs  id.rs  lib.rs
crates/sw-core/src/world/: area.rs  chunk.rs  manager.rs  mod.rs  ticket.rs
crates/sw-core/src/world/generators/: classic.rs  mod.rs
crates/sw-engine/: Cargo.toml
crates/sw-engine/src/: core.rs  events.rs  lib.rs
crates/sw-lang/: Cargo.toml
crates/sw-network-client/: Cargo.toml
crates/sw-network-server/: Cargo.toml
crates/sw-renderer/: Cargo.toml
crates/sw-renderer/src/: camera.rs  lib.rs  main.rs  pass.rs  window.rs
crates/sw-renderer/src/engine/: camera.rs  context.rs  event.rs  instance.rs  mesh.rs  mod.rs  renderer.rs  texture.rs  vertex.rs  window.rs
crates/sw-renderer/src/engine/shaders/: mod.rs  sprite.rs
crates/sw-renderer/src/engine/shapes/: mod.rs  rect.rs
crates/sw-renderer/src/pass/primary/: mod.rs
crates/sw-renderer/src/pass/ui/: mod.rs
crates/sw-renderer/src/pass/ui/shaders/: shader.wgsl
crates/sw-renderer/src/resources/: shader.wgsl
crates/sw-vm/: Cargo.toml
