[package]
name = "sw-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
noise = "0.8.2"
rand = "0.8.5"
shrev = "1.1.3"
specs = { version = "0.18.0", features = ["derive", "parallel"] }
