[package]
name = "sw-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
specs = { version = "0.18.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.14.2"
winit = "0.27.5"
pollster = "0.2"
instant = "0.1"
bytemuck = { version = "1.12", features = ["derive"] }
cgmath = "0.18"
anyhow = "1.0.68"
thiserror = "1.0.38"

cfg-if = "1"

sw-engine = { path = "../sw-engine" }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"

web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[lib]
crate-type = ["cdylib", "rlib"]
